tests/ui/type_unsupported_const_path_pattern.stderr
error: tests/ui/type_unsupported_const_path_pattern.ql:9:9: path pattern syntax is not supported for `LIMIT`
          LIMIT => 1,
          ^^^^^ pattern here
error: tests/ui/type_unsupported_const_path_pattern.ql:10:9: path pattern syntax is not supported for `Bound`
          Bound => 2,
          ^^^^^ pattern here
error: tests/ui/type_unsupported_const_path_pattern.ql:11:9: path pattern syntax is not supported for `TOTAL`
          TOTAL => 3,
          ^^^^^ pattern here
error: tests/ui/type_unsupported_const_path_pattern.ql:12:9: path pattern syntax is not supported for `Count`
          Count => 4,
          ^^^^^ pattern here
